adição de novos arquivos

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styleeco.css">
     <link rel="stylesheet" href="css/responsive.css" media="screen">
+    <link rel="website icon" type="png" href="">
 
 
     <!-- Iconis Usados No BootStrap -->
@@ -226,7 +227,7 @@
 
                         <div class="txt-instru-box">
                             <h4><span>Negociação e Logística</span></h4>
-                            <p>Ferramentas integradas para negociação de preços, agendamento de coletas e coordenação logística</p>
+                            <p>Ferramentas integradas para negociação de preços, agendamento de coletas e coordenação logística.</p>
                         </div>
                     </article>
 
