--- a/password.html
+++ b/password.html
@@ -17,14 +17,14 @@
 <body>
     <div id="container">
         <div class="banner">
-            <img src="/logoecoplus/Sem_título-1-removebg-preview.png"  width="250" height="380" alt="imagem-login">
+            <img src="/logoecoplus/logo_cinza sem fundo.png" width="250" height="250"  alt="imagem-login" >
         </div>
 
         <div class="box-login">
-            <h1>Perdeu a sua senha?<br>recupere via email agora</h1>
+            <h1>Perdeu a sua senha?<br>Recupere via e-mail agora</h1>
 
             <div class="box-account">
-                <h2>insira a sua conta existente</h2>
+                <h2>Insira a sua conta existente</h2>
                 <input type="text" name="username" id="username" placeholder="Apelido">
                 <input type="email" name="email" id="email" placeholder="E-mail">
                 <input type="email" name="cmail" id="cmail" placeholder="Confirmar o E-mail">
@@ -35,7 +35,7 @@
                     próxima tela, cetifique-se de que o seu
                     apelido bem como o e-mail esteja corretos
                     e que seja o mesmo da conta que você deseja
-                    recuperar
+                    recuperar.
                 </p>
 
                 <button>Obter o código</button>
@@ -43,7 +43,7 @@
         </div>
     </div>
 
-    <a href="login.html">
+    <a href="index.html">
         <div id="bubble">
             <img src="logoecoplus/logo_cinza sem fundo.png" alt="icone-usuário" title="fazer-login" eight="40px" width="40px">
         </div>
