--- a/Criarconta.html
+++ b/Criarconta.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Criar conta 1/2</title>
 
+    <!-- Bootstrap Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <!-- Fim -->
+
     <!--CSS-->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/style.css">
@@ -16,6 +20,7 @@
 </head>
 <body>
 
+     
     <div id="fundo-login">   <!-- banner fundo criar conta -->
         <div>     
         </div>
@@ -24,6 +29,7 @@
     <div id="container">
         <div class="banner">     
         </div>
+        <i class="bi bi-arrow-left-short"></i>
 
         <div class="box-login">
             <h1>Junte-se a nós,<br>Crie hoje a sua conta!</h1>
@@ -39,11 +45,6 @@
                 <a href='Criarcontadois.html'><button>Prosseguir</button></a>
         </div>
     </div>
-
-    <a href="login.html">
-        <div id="home">
-            <img src="logoecoplus/logo_cinza sem fundo.png" alt="icone-usuário" title="Voltar a Home" height="40px" width="40px">  
-    </a>
 
     <script>
         $('#termo').click(() => {
