--- a/faq.html
+++ b/faq.html
@@ -74,8 +74,8 @@
                 <section class="menu-mobile" id="menu-mobile">
                     <nav>
                         <ul>
-                            <li><a href="#">Inicio</a></li>
-                            <li><a href="#">Sobre Nós</a></li>
+                            <li><a href="index.html">Inicio</a></li>
+                            <li><a href="sobrenos.html">Sobre Nós</a></li>
                             <li><a href="faq.html">Biogás</a></li>
                         </ul>
                     </nav>
